glue/excglue.h

/*  NOTICE -- THIS FILE IS AUTO-GENERATED -- DO NOT EDIT
MissingPy: Haskell Python Interface libraries
Copyright (C) 2004 - 2005 John Goerzen <jgoerzen@complete.org>

All code is under the following license unless otherwise noted:
   This program is free software; you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
   the Free Software Foundation; either version 2 of the License, or
   (at your option) any later version.

   This program is distributed in the hope that it will be useful,
   but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   GNU General Public License for more details.

   You should have received a copy of the GNU General Public License
   along with this program; if not, write to the Free Software
   Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307 USA

The GNU General Public License is available in the file COPYING in the source
distribution.  Debian GNU/Linux users may find this in
/usr/share/common-licenses/GPL-2.

If the GPL is unacceptable for your uses, please e-mail me; alternative
terms can be negotiated for your project.
*/
#include <Python.h>
extern PyObject *hspy_ArithmeticError(void);
extern PyObject *hspy_AssertionError(void);
extern PyObject *hspy_AttributeError(void);
extern PyObject *hspy_EOFError(void);
extern PyObject *hspy_EnvironmentError(void);
extern PyObject *hspy_Exception(void);
extern PyObject *hspy_FloatingPointError(void);
extern PyObject *hspy_IOError(void);
extern PyObject *hspy_ImportError(void);
extern PyObject *hspy_IndexError(void);
extern PyObject *hspy_KeyError(void);
extern PyObject *hspy_KeyboardInterrupt(void);
extern PyObject *hspy_LookupError(void);
extern PyObject *hspy_MemoryError(void);
extern PyObject *hspy_NameError(void);
extern PyObject *hspy_NotImplementedError(void);
extern PyObject *hspy_OSError(void);
extern PyObject *hspy_OverflowError(void);
extern PyObject *hspy_ReferenceError(void);
extern PyObject *hspy_RuntimeError(void);
extern PyObject *hspy_StandardError(void);
extern PyObject *hspy_SyntaxError(void);
extern PyObject *hspy_SystemError(void);
extern PyObject *hspy_SystemExit(void);
extern PyObject *hspy_TypeError(void);
extern PyObject *hspy_ValueError(void);
extern PyObject *hspy_ZeroDivisionError(void);

#ifdef MS_WINDOWS
extern PyObject *hspy_WindowsError(void);
#endif